# get_current_usd

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
get_currency/: apps.py  models.py  services.py  urls.py  views.py
